[package]
name = "tokio-retrying-tcpstream"
version = "0.1.0"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"
mio = "^0.6.14"
log = "0.4"
