[package]
name = "tokio-retrying-tcpstream"
description = "tokio::net::TcpStream that will reconnect after fatal error is returned"
keywords = ["async", "net", "tcp", "io"]
categories = ["asynchronous", "network-programming"]
version = "0.2.0"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["tcp"] }
futures = "0.3"
log = "0.4"

[dev-dependencies]
futures-retry = { git = "https://gitlab.com/xoac/futures-retry", branch = "test" }
tokio = { version ="0.2", features = ["full"] }
tokio-util = {version = "0.2", features = ["codec"] }
